# TicTacToe

./: CMakeLists.txt  Makefile  client.c  communication.c  communication.h  game.c  game.h  header.h  main.c  server.c
src/: client.c  game.c  server.c
